adding docker file